samples/_failures_safe/1761715519_768bb7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d25971cb.c: In function ‘tokenize’:
./samples/SAFE/__tmp_d25971cb.c:146:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  146 |     uint32_t count
      |     ^~~~~~~~
./samples/SAFE/__tmp_d25971cb.c:146:5: error: expected declaration or statement at end of input
